feat(cross): #2994.230 create rule 350
- Created R350 for memory protection mechanisms
- Renamed the "Mobile" category to "Devices"
- Adjusted the category name in the rules template
- Adjusted the category description


Former-commit-id: df7f03faca4c97ff72ebe63e0ba8b5b7fabe0905

--- a/content/pages/products/rules/index.adoc
+++ b/content/pages/products/rules/index.adoc
@@ -110,7 +110,7 @@ computer networks.
 . [inner]#link:../../rules#virtualization[Virtualization]#: Rules regarding the configuration and management of virtual
 environments.
 
-. [inner]#link:../../rules#mobile[Mobile]#: Rules regarding the configuration and protection of mobile devices
+. [inner]#link:../../rules#devices[Devices]#: Rules regarding the configuration and protection of mobile and *IoT* devices
 and applications.
 
 . [inner]#link:../../rules#social[Social]#: Rules regarding the usage of social networks and publicly
