--- a/content/pages/rules/devices/213/index.adoc
+++ b/content/pages/rules/devices/213/index.adoc
@@ -1,5 +1,5 @@
 :slug: rules/213/
-:category: mobile
+:category: devices
 :description: This requirement explicitly states that mobile devices must allow their remote geographical location in case of loss.
 :keywords: Mobile Device, Location, Remote, Geographic, Loss, Requirement, Rules, Ethical Hacking, Pentesting
 :rules: yes
