--- a/content/pages/rules/devices/214/index.adoc
+++ b/content/pages/rules/devices/214/index.adoc
@@ -1,5 +1,5 @@
 :slug: rules/214/
-:category: mobile
+:category: devices
 :description: This requirement establishes the importance of managing remote data destruction on mobile devices containing sensitive information.
 :keywords: Sensitive Information, Management, Mobile Device, Loss, ASVS, HIPAA, Rules, Ethical Hacking, Pentesting
 :rules: yes
