--- a/content/pages/rules/devices/326/index.adoc
+++ b/content/pages/rules/devices/326/index.adoc
@@ -1,5 +1,5 @@
 :slug: rules/326/
-:category: mobile
+:category: devices
 :description: This requirement establishes the importance of checking whether a device on which mobile applications will run has been rooted.
 :keywords: Detection, Root, Device, Rooting, Mobile Device, CWE, Rules, Ethical Hacking, Pentesting
 :rules: yes
