feat(doc): #2994.231 add asvs refs to some rules
- Added ASVS references to R181, R088, R264, R266 and R158


Former-commit-id: 52f9a4c1bbf8d7f52dd4141d3d45f97dc2637399

--- a/content/pages/rules/certificates/088/index.adoc
+++ b/content/pages/rules/certificates/088/index.adoc
@@ -28,6 +28,10 @@ authenticator output
 claimant for which the public key is known to the verifier).
 
 . [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+Appendix C: Internet of Things Verification Requirements.(C.9)]
+Verify that wireless communications are mutually authenticated.
+
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.2 General Authenticator Requirements.(2.2.4)]
 Verify impersonation resistance against phishing,
 such as the use of multi-factor authentication, cryptographic devices with
