--- a/content/pages/rules/source/158/index.adoc
+++ b/content/pages/rules/source/158/index.adoc
@@ -28,6 +28,11 @@ All application components, libraries, modules, frameworks, platform,
 and operating systems are free from known vulnerabilities.
 
 . [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+Appendix C: Internet of Things Verification Requirements.(C.11)]
+Verify that any use of banned *C* functions are replaced with the appropriate
+safe equivalent functions.
+
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.4 Memory, String, and Unmanaged Code Requirements.(5.4.1)]
 Verify that the application uses memory-safe string, safer memory copy and
 pointer arithmetic to detect or prevent stack, buffer, or heap overflows.
