--- a/content/pages/rules/devices/350/index.adoc
+++ b/content/pages/rules/devices/350/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/350/
 :category: devices
 :description: This requirement establishes the importance of enabling memory protection mechanisms.
-:keywords: Memory, Protection, Mechanism, Device, IoT, ASVS, Rules, Ethical Hacking, Pentesting
+:keywords: Memory, Protection, Mechanism, Device, IoT, ASVS, CWe, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R350. Enable memory protection mechanisms
@@ -12,7 +12,11 @@ The system should enable memory protection mechanisms such as *ASLR* and *DEP*.
 
 == References
 
-. [[r1]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r1]] link:https://cwe.mitre.org/data/definitions/1233.html[CWE-1233: Improper Hardware Lock Protection for Security Sensitive Controls].
+The product implements a register lock bit protection feature that permits
+security sensitive controls to modify the protected configuration.
+
+. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 Appendix C: Internet of Things Verification Requirements.(C.3)]
 Verify that memory protection controls such as *ASLR* and *DEP* are enabled by
 the embedded/**IoT** operating system, if applicable.
