--- a/content/pages/rules/source/156/index.adoc
+++ b/content/pages/rules/source/156/index.adoc
@@ -79,23 +79,28 @@ their processing could create significant risks to the fundamental rights and
 freedoms.
 
 . [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+Appendix C: Internet of Things Verification Requirements.(C.13)]
+Verify all code including third-party binaries, libraries, frameworks are
+reviewed for hardcoded credentials (*backdoors*).
+
+. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.10 Service Authentication Requirements.(2.10.3)]
 Verify that passwords are stored with sufficient protection to prevent offline
 recovery attacks,
 including local system access.
 
-. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.10 Service Authentication Requirements.(2.10.4)]
 Verify passwords, integrations with databases and third-party systems, seeds
 and internal secrets, and API keys are managed securely and not included in the
 source code or stored within source code repositories.
 
-. [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r13]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V6.4 Secret Management.(6.4.1)]
 Verify that a secrets management solution such as a key vault is used to
 securely create, store, control access to and destroy secrets.
 
-. [[r13]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r14]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V6.4 Secret Management.(6.4.2)]
 Verify that key material is not exposed to the application but instead uses an
 isolated security module like a vault for cryptographic operations.
