--- a/content/pages/rules/source/302/index.adoc
+++ b/content/pages/rules/source/302/index.adoc
@@ -36,18 +36,23 @@ The software imports, requires, or includes executable functionality
 sphere.
 
 . [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+Appendix C: Internet of Things Verification Requirements.(C.12)]
+Verify that each firmware maintains a software bill of materials cataloging
+third-party components, versioning, and published vulnerabilities.
+
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V14.1 Build.(14.1.4)]
 Verify that the application, configuration, and all dependencies can be
 re-deployed using automated deployment scripts,
 built from a documented and tested runbook in a reasonable time,
 or restored from backups in a timely fashion.
 
-. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V14.2 Dependency.(14.2.1)]
 Verify that all components are up to date, preferably using a dependency
 checker during build or compile time.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V14.2 Dependency.(14.2.5)]
 Verify that an inventory catalog is maintained of all third party libraries in
 use.
