--- a/content/pages/rules/source/159/index.adoc
+++ b/content/pages/rules/source/159/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/159/
 :category: source
 :description: This requirement establishes the importance of obfuscating the application source code in production environments.
-:keywords: Requirement, Security, Source Code, Obfuscation, Protection, Production, Rules, Ethical Hacking, Pentesting
+:keywords: Requirement, Security, Source Code, Obfuscation, Protection, ASVS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R159. Obfuscate code
@@ -17,3 +17,8 @@ Source code must be obfuscated in production environments.
 == References
 
 . [[r1]] link:https://www.bsimm.com/framework/deployment/software-environment.html[BSIMM9 SE3.2 Use code protection].
+
+. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+Appendix C: Internet of Things Verification Requirements.(C.18)]
+Verify security controls are in place to hinder firmware reverse engineering
+(e.g., removal of verbose debugging symbols).
