refac(doc): #3547 differentiators add osce
- OSCE has been added to Team section on Differentiators page.


Former-commit-id: dcb1ce66f1213580157d15aeae42948cfe1a2c95

--- a/content/pages/services/differentiators/index.adoc
+++ b/content/pages/services/differentiators/index.adoc
@@ -58,6 +58,7 @@ a|==== Team
 a|{yes} Our hackers are certified in practical hacking in real scenarios
 link:../certifications/[^3^]:
 
+* `OSCE`.
 * `OSCP`.
 * `OSWP`.
 * `CRTE`.
