refac(cross): #3533 add banners to internal pages
Former-commit-id: 0842d1697bcfcca9568261fb172aa9f9c1f3513c

--- a/content/pages/events/breaking-the-build/index.adoc
+++ b/content/pages/events/breaking-the-build/index.adoc
@@ -4,6 +4,7 @@
 :description: The conference Breaking the Build presents Fluid Attacks' SecDevOps habits that allow us to keep improving every day, and how to implement them in your company.
 :keywords: Fluid Attacks, SecDevOps, Habits, Breaking the Build, CI-CD, Conference, Pentesting, Ethical Hacking
 :eventspage: yes
+:banner: events-bg
 
 = Breaking the Build
 
