--- a/content/pages/about-us/index.adoc
+++ b/content/pages/about-us/index.adoc
@@ -1,6 +1,7 @@
 :slug: about-us/
 :description: Fluid Attacks is a cybersecurity company that offers ethical hacking and pentesting products and services.
 :keywords: Fluid Attacks, About Us, Company, Ethical Hacking, Pentesting, Cybersecurity
+:banner: about-us-bg
 
 = About Us
 
