--- a/content/pages/events/burn-the-datacenter/index.adoc
+++ b/content/pages/events/burn-the-datacenter/index.adoc
@@ -4,6 +4,7 @@
 :description: Future of technologies, software development, security testing and management of development lifecycle in one talk. Find out more about it here.
 :keywords: Fluid Attacks, Burn the Datacenter, Technology, Continuous Integration Security Testing, Software Development, Development Lifecycle, Pentesting, Ethical Hacking
 :eventspage: yes
+:banner: events-bg
 
 = Burn the Datacenter
 
