--- a/content/pages/events/index.adoc
+++ b/content/pages/events/index.adoc
@@ -2,6 +2,7 @@
 :category: about-us
 :description: As cybersecurity experts, we offer talks related to the security information field. Fluid Attacks can help you with your next conference. Check our options.
 :keywords: Fluid Attacks, Talk, Security, Experts, Cybersecurity, Conference, Events, Pentesting, Ethical Hacking
+:banner: events-bg
 
 = Events
 
