--- a/content/pages/events/live-hacking/index.adoc
+++ b/content/pages/events/live-hacking/index.adoc
@@ -3,6 +3,7 @@
 :description: The Live Hacking event shows the process of finding and exploiting security vulnerabilities, explaining how they're generated from the source code.
 :keywords: Fluid Attacks, Live Hacking, Security, BWAPP, Event, Vulnerabilities, Source Code, Ethical Hacking, Pentesting
 :eventspage: yes
+:banner: events-bg
 
 = Live Hacking
 
