--- a/content/pages/events/securing-device/index.adoc
+++ b/content/pages/events/securing-device/index.adoc
@@ -3,6 +3,7 @@
 :description: Let's talk about the risks that smartphone users are constantly exposed to and unaware of, as well as what to do to mitigate them.
 :keywords: Fluid Attacks, Talks, Mobile Device, Events, Security, Smartphone, Pentesting, Ethical Hacking
 :eventspage: yes
+:banner: events-bg
 
 = Securing your Mobile Device
 
