--- a/content/pages/partners/index.adoc
+++ b/content/pages/partners/index.adoc
@@ -7,6 +7,7 @@
 :australia: image:../images/icons/australia-flag.png[Australia Flag]
 :peru: image:../images/icons/peru-flag.png[Peru Flag]
 :canada: image:../images/icons/canada-flag.png[Canada Flag]
+:banner: partners-bg
 
 = Partners
 
