--- a/content/pages/reviews/index.adoc
+++ b/content/pages/reviews/index.adoc
@@ -2,6 +2,7 @@
 :category: about-us
 :description: Fluid Attacks has recently been recognized by Clutch as one of the Top Cybersecurity Consulting Companies in the world.
 :keywords: Fluid Attacks, Reviews, Clutch, Services, Products, Recognition, Clutch Recognition, Pentesting, Ethical Hacking
+:banner: reviews-bg
 
 = Reviews
 
