--- a/content/pages/services/certifications/index.adoc
+++ b/content/pages/services/certifications/index.adoc
@@ -2,6 +2,7 @@
 :category: services
 :description: Our team of ethical hackers and pentesters counts with high certifications related to cybersecurity information.
 :keywords: Fluid Attacks, Ethical Hackers, Team, Certifications, Cybersecurity, Pentesters, Whitehat Hackers
+:banner: certifications-bg
 
 = Certifications
 
